[workspace]
resolver = "2"
members = ["packages/grui", "packages/grui-macros", "packages/example-basic"]

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
grui = { path = "packages/grui", version = "0.0.1" }
grui-macros = { path = "packages/grui-macros", version = "0.0.1" }
godot = "0.4.5"
pretty_assertions = "1.4.1"
