[workspace]
resolver = "2"
members = ["packages/example", "packages/grui", "packages/grui-macros"]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/LouisBrunner/grui"

[workspace.dependencies]
godot = "0.5.4"
godot-grui = { path = "packages/grui", version = "0.0.1" }
godot-grui-macros = { path = "packages/grui-macros", version = "0.0.1" }
pretty_assertions = "1.4.1"
